Fixes #12 - overflow in code examples

--- a/docs/css/styleguide.css
+++ b/docs/css/styleguide.css
@@ -23,3 +23,7 @@
 .text-left {
 	text-align: left;
 }
+
+pre {
+	overflow-y: scroll;
+}
